--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <p>Hello world! This is HTML5 Boilerplatfse.</p>
         <div id="content"></div>
 		<script src="express-bundle.js"></script>
 
